# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1124 2011/04/13 15:33:10 mpagano Exp $

*git-sources-2.6.39_rc3-r2 (13 Apr 2011)
*git-sources-2.6.39_rc3-r1 (13 Apr 2011)
*git-sources-2.6.39_rc3 (13 Apr 2011)

  13 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc3.ebuild, +git-sources-2.6.39_rc3-r1.ebuild,
  +git-sources-2.6.39_rc3-r2.ebuild:
  Version bumps

*git-sources-2.6.39_rc2-r4 (12 Apr 2011)

  12 Apr 2011; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc2-r4.ebuild:
  Version bump

*git-sources-2.6.39_rc2-r3 (11 Apr 2011)

  11 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc2-r3.ebuild:
  Version bump

*git-sources-2.6.39_rc2-r2 (09 Apr 2011)

  09 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc2-r2.ebuild:
  Version bump

*git-sources-2.6.39_rc2-r1 (08 Apr 2011)

  08 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc2-r1.ebuild:
  Version bump

*git-sources-2.6.39_rc2 (06 Apr 2011)

  06 Apr 2011; Mike Pagano <mpagano@gentoo.org> -git-sources-2.6.38-r12.ebuild,
  -git-sources-2.6.38-r13.ebuild, -git-sources-2.6.38-r14.ebuild,
  -git-sources-2.6.38-r15.ebuild, -git-sources-2.6.38-r16.ebuild,
  -git-sources-2.6.38-r17.ebuild, -git-sources-2.6.38-r18.ebuild,
  -git-sources-2.6.38-r19.ebuild, -git-sources-2.6.38-r20.ebuild,
  -git-sources-2.6.38-r21.ebuild, +git-sources-2.6.39_rc2.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.39_rc1-r5 (05 Apr 2011)

  05 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc1-r5.ebuild:
  Version bump

*git-sources-2.6.39_rc1-r4 (05 Apr 2011)

  05 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc1-r4.ebuild:
  Version bump

*git-sources-2.6.39_rc1-r3 (02 Apr 2011)

  02 Apr 2011; Michael Pagano <mpagano@gentoo.org>