@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1124 2011/04/13 15:33:10 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1125 2011/04/14 12:44:28 mpagano Exp $
+
+*git-sources-2.6.39_rc3-r3 (14 Apr 2011)
+
+  14 Apr 2011; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.39_rc3-r3.ebuild:
+  Version bump
 
 *git-sources-2.6.39_rc3-r2 (13 Apr 2011)
 *git-sources-2.6.39_rc3-r1 (13 Apr 2011)
